replaced the undetermined icon

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       popupAnchor: [0, -12]
     });
     const unknownIcon = L.icon({
-      iconUrl: 'https://cdn-icons-png.flaticon.com/512/565/565547.png', // Use empty icon for undetermined
+      iconUrl: 'data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"><circle cx="16" cy="16" r="16" fill="gray"/><text x="16" y="22" font-size="20" font-family="Arial" fill="white" text-anchor="middle" font-weight="bold">?</text></svg>', // Use empty icon for undetermined
       iconSize: [24, 24],
       iconAnchor: [12, 12],
       popupAnchor: [0, -12]
