--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
     }
 
     const pct = total > 0 ? Math.round((occupied / total) * 100) : 0;
-    // Get Sydney time
-    const now = new Date().toLocaleString('en-AU', { timeZone: 'Australia/Sydney', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: false });
+    // Get Sydney time in 12-hour format with AM/PM
+    const now = new Date().toLocaleString('en-AU', { timeZone: 'Australia/Sydney', hour: '2-digit', minute: '2-digit', second: '2-digit', hour12: true });
     document.getElementById('summary').innerHTML = `
       <strong>Total:</strong> ${total} |
       <strong>Occupied:</strong> ${occupied} |
